[gd_scene load_steps=5 format=3 uid="uid://wrqm2ndrjgte"]

[ext_resource type="Script" uid="uid://j7qq1q6uk1xl" path="res://level_fight.gd" id="1_73box"]
[ext_resource type="Texture2D" uid="uid://bsf6orrc4su1q" path="res://assets/img/Reference (2).png" id="2_aaris"]
[ext_resource type="AudioStream" uid="uid://vpdfuaabmfhb" path="res://assets/music/combat.mp3" id="3_bfyhy"]
[ext_resource type="AudioStream" uid="uid://ctnrx6aid125x" path="res://assets/effects/epee_sound.mp3" id="4_a5kjk"]

[node name="level_combat" type="Node"]
script = ExtResource("1_73box")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 896.0
texture = ExtResource("2_aaris")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bfyhy")
parameters/looping = true

[node name="hit" type="Button" parent="."]
offset_left = 56.0
offset_top = 920.0
offset_right = 544.0
offset_bottom = 1056.0
theme_override_font_sizes/font_size = 40
text = "ATTACK"

[node name="hit2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_a5kjk")

[node name="pv_monster" type="Label" parent="."]
offset_left = 1248.0
offset_top = 552.0
offset_right = 1348.0
offset_bottom = 652.0

[node name="pv_player" type="Label" parent="."]
offset_left = 312.0
offset_top = 560.0
offset_right = 412.0
offset_bottom = 660.0

[connection signal="pressed" from="hit" to="." method="_on_hit_pressed"]
